# Img_processing

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  main.cpp
utils/: Image.cc  Image.cpp  Image.hh  ImageHandler.cc  ImageHandler.hh  ImageProcessor.cc  ImageProcessor.hh  ImageType.hh  Pixel.cc  Pixel.hh
utils/ChartGenerator/: Chart.cc  Chart.hh
